# codex-orchestrator

./: .gitignore  README.md  codex_executor.py  config.py  config.yaml.sample  logger.py  models.py  output_writer.py  prompt_renderer.py  pyproject.toml  requirements.txt  run.py  status_manager.py  target_loader.py  targets.txt
config/: config.yaml  targets.txt
samples/: LoginService.cs  UserService.cs
templates/: api_spec.md  batch_spec.md  class_spec.md  screen_spec.md
